improve test code coverage